chap-7/some-domain-dest.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: some-domain-com
spec:
  host: some.domain.com
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
